# scanner-standalone

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.cursor/plans/: bt_scanner_modules_dcc87126.plan.md
components/espnow_proto/include/: espnow_proto.h
docs/: HARDWARE_TEST.md  UART_TELEMETRY.md  oui_sample.csv
main/: CMakeLists.txt  ble_scanner.c  ble_scanner.h  board_config.h  bt_scanner.c  bt_scanner.h  bt_stack.c  bt_stack.h  classic_scanner.c  classic_scanner.h  device_cache.c  device_cache.h  device_record.h  espnow_link.c  espnow_link.h  main.c  nrf24_scanner.c  nrf24_scanner.h  radio_guard.c  radio_guard.h  scanner_config.h  scanner_types.h  sweep_runner.c  sweep_runner.h  telemetry_emit.c  telemetry_emit.h  telemetry_encode.c  telemetry_encode.h  telemetry_proto.c  telemetry_proto.h  telemetry_uart.c  telemetry_uart.h  wifi_scanner.c  wifi_scanner.h
