idf_component_register(
    SRCS
        "main.c"
        "wifi_scanner.c"
        "device_cache.c"
        "radio_guard.c"
        "bt_stack.c"
        "ble_scanner.c"
        "classic_scanner.c"
        "bt_scanner.c"
        "sweep_runner.c"
        "nrf24_scanner.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_driver_uart
        esp_driver_gpio
        esp_driver_spi
        esp_netif
        esp_event
        bt
        esp_timer
)
