idf_component_register(
    SRCS
        "main.c"
        "wifi_scanner.c"
        "device_cache.c"
        "radio_guard.c"
        "bt_stack.c"
        "ble_scanner.c"
        "classic_scanner.c"
        "bt_scanner.c"
        "sweep_runner.c"
        "nrf24_scanner.c"
        "telemetry_proto.c"
        "telemetry_encode.c"
        "telemetry_uart.c"
        "telemetry_emit.c"
        "espnow_link.c"
    INCLUDE_DIRS "."
    REQUIRES
        espnow_proto
        nvs_flash
        esp_wifi
        esp_event
        esp_driver_uart
        esp_driver_gpio
        esp_driver_spi
        esp_netif
        esp_event
        bt
        esp_timer
)
